tests/skip/duplicate-setters-2.stderr
error: encountered duplicate `#[skip(setters)]` attribute for field
 --> $DIR/duplicate-setters-2.rs:5:15
  |
5 |     #[skip] #[skip(setters)]
  |               ^^^^

error: duplicate `#[skip(setters)]` here
 --> $DIR/duplicate-setters-2.rs:5:7
  |
5 |     #[skip] #[skip(setters)]
  |       ^^^^
